--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 colorama = "^0.4.6"
 
 [tool.poetry.scripts]
-say-hello = "hello.scripts.say_hello:main"
+fomin = "hello.scripts.say_hello:main"
 
 
 [tool.poetry.group.dev.dependencies]
